src/z80asm/z80asm2/t/30-directive/expected/binary_12.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/binary_12.asm
Assembling t/30-directive/input/binary_12.asm...
t/30-directive/input/binary_12.asm:1:28: error: Unexpected token after BINARY: extra
    #binary file-not-found.bin extra
                               ^
